[gd_scene load_steps=11 format=3 uid="uid://comrovgj0rfvd"]

[ext_resource type="Script" path="res://scripts/Bullet.gd" id="1_4tedr"]
[ext_resource type="Texture2D" uid="uid://wjit0n5sxgfk" path="res://sprites/candle.png" id="2_321cf"]
[ext_resource type="Texture2D" uid="uid://blnf3d6fso1i1" path="res://sprites/ace.png" id="3_4s78l"]
[ext_resource type="Texture2D" uid="uid://earrg4mbnauq" path="res://sprites/lasso.png" id="4_mklnw"]
[ext_resource type="Texture2D" uid="uid://cvt636g78sifc" path="res://sprites/coin.png" id="5_lr5dj"]
[ext_resource type="Texture2D" uid="uid://f6my4hvinndh" path="res://sprites/kamibokken.png" id="6_icaaa"]
[ext_resource type="Texture2D" uid="uid://dwixajydsfmuh" path="res://sprites/shuriken_down1.png" id="6_ug5ci"]
[ext_resource type="Texture2D" uid="uid://cq3ispglr04be" path="res://sprites/shuriken_down2.png" id="7_y4x8a"]
[ext_resource type="Texture2D" uid="uid://di8t5g4jixho2" path="res://sprites/snowball.png" id="9_ytdby"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uom7v"]
size = Vector2(4, 4)

[node name="Bullet" type="Area2D"]
script = ExtResource("1_4tedr")
texture_array = Array[Texture2D]([ExtResource("2_321cf"), ExtResource("3_4s78l"), ExtResource("4_mklnw"), ExtResource("5_lr5dj"), ExtResource("6_ug5ci"), ExtResource("7_y4x8a"), ExtResource("6_icaaa"), ExtResource("9_ytdby")])

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("2_321cf")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uom7v")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 0.21
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
